fourm page mobile spacing fixed

--- a/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
@@ -1502,6 +1502,10 @@ fieldset{
   }
   .text-section{
     margin-top: 17px;
+     @include breakpoint($mobile){
+       padding-left:20px;
+       padding-right:20px;
+     }
   }
   // .btn-left.forum-page{
   //   padding-left: 0; 
